--- a/wwwLesson2/indexLesson2.html
+++ b/wwwLesson2/indexLesson2.html
@@ -33,7 +33,7 @@
 <!-- 12) -->
 <div class="cc">
     <!--когда браузер сканирует наш документ и
-    находят "class="cc" он дает ему свойства "cc" from "style.css" page-->
+    находят "class="cc" он дает ему свойства "cc" from "styleLesson2.css" page-->
     <!-- 11)-->
     <h2>About Selenium</h2>
     Selenium is a suite of tools for automating web browsers.</div>
